# bilinear-decomposition

./: .gitignore  pyproject.toml  readme.md  requirements.txt
exercises/: 0_decomposition.ipynb  WRITEUP.md
image/: datasets.py  model.py
language/: __init__.py  finetuning.py  model.py  single_layer_bilinear_tiny_stories.ipynb  top_weights.ipynb  train.py  utils.py
mnist/: model.py  plotting.py
mnist/official/: readme.md  single_layer_bilinear_fashion_mnist.ipynb  single_layer_bilinear_mnist.ipynb  two_layer_bilinear_mnist.ipynb  utils.py
mnist/simple/: example.ipynb  model.py  readme.md  utils.py
sae/: __init__.py
shared/: __init__.py  components.py
src/image/: __init__.py  datasets.py  model.py  plotting.py  sparse.py
src/language/: transformer.py
src/sae/: functions.py  sae.py  samplers.py  tracer.py  visualizer.py
src/toy/: model.py
toy/: __init__.py  model.py
tutorials/: 0_introduction.ipynb  1_image.ipynb  2_language.ipynb  3_finetuning.ipynb
